# boxy-py

./: .gitmodules  .readthedocs.yaml  Cargo.toml  README.md  boxy_py.py  boxy_py.pyi  mkdocs.yml  pyproject.toml  pyrightconfig.json  tester.py
.github/workflows/: CI.yml
docs/: api.md  index.md
src/: lib.rs
src/boxy_py/: __init__.py  constructs.py  core.py
