[project]
name = "boxy-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BastaMasta", email = "56192822+BastaMasta@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
