[build-system]
requires = ["maturin>=1.14,<2.0"]
build-backend = "maturin"

[project]
name = "boxy-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
optional-dependedncies = {docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]}



[tool.maturin]
module-name = "boxy_py"
